--- a/Video.html
+++ b/Video.html
@@ -19,10 +19,10 @@ Produce video clips.">
   
   
   <title>Video</title>
-  <link rel="stylesheet" href="assets/font-awesome-brands/../css/fontawesome.min.css">
-  <link rel="stylesheet" href="assets/font-awesome-brands/css/brands.min.css">
   <link rel="stylesheet" href="assets/font-awesome-solid/../css/fontawesome.min.css">
   <link rel="stylesheet" href="assets/font-awesome-solid/css/solid.min.css">
+  <link rel="stylesheet" href="assets/font-awesome-brands/../css/fontawesome.min.css">
+  <link rel="stylesheet" href="assets/font-awesome-brands/css/brands.min.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -37,13 +37,13 @@ Produce video clips.">
   
   
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZCMDXTZT7W"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LZYYQG5695"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-ZCMDXTZT7W');
+  gtag('config', 'G-LZYYQG5695');
 </script>
   
 </head>
@@ -498,7 +498,7 @@ Produce video clips.">
     </div>
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-6j" data-rv-view="241">
+<section class="mbr-section" id="witsec-modal-window-block-6j" data-rv-view="372">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -571,7 +571,7 @@ document.addEventListener("DOMContentLoaded", function() {
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-9n" data-rv-view="544">
+<section class="mbr-section" id="witsec-modal-window-block-9n" data-rv-view="373">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -644,7 +644,7 @@ document.addEventListener("DOMContentLoaded", function() {
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-6k" data-rv-view="242">
+<section class="mbr-section" id="witsec-modal-window-block-6k" data-rv-view="374">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -734,7 +734,7 @@ document.addEventListener("DOMContentLoaded", function() {
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/j" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise page builder - <a href="https://mobirise.site/p" style="color:#aaa;">Click now</a></p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/o" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/r" style="color:#aaa;">This site</a> was designed with Mobirise theme</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9180858051840976"
      crossorigin="anonymous"></script>
   
