--- a/guidelines.html
+++ b/guidelines.html
@@ -19,10 +19,10 @@ Produce video clips.">
   
   
   <title>guidelines</title>
-  <link rel="stylesheet" href="assets/font-awesome-brands/../css/fontawesome.min.css">
-  <link rel="stylesheet" href="assets/font-awesome-brands/css/brands.min.css">
   <link rel="stylesheet" href="assets/font-awesome-solid/../css/fontawesome.min.css">
   <link rel="stylesheet" href="assets/font-awesome-solid/css/solid.min.css">
+  <link rel="stylesheet" href="assets/font-awesome-brands/../css/fontawesome.min.css">
+  <link rel="stylesheet" href="assets/font-awesome-brands/css/brands.min.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
@@ -79,7 +79,7 @@ Produce video clips.">
                             VideoCutter</a><div class="dropdown-menu"><a class="text-black dropdown-item text-primary display-4" href="javascript:OpenModal('videocutter')">What is VideoCutter&nbsp;</a><a class="text-black dropdown-item text-primary display-4" href="GuideForWindows.html"><span class="socicon socicon-windows mbr-iconfont mbr-iconfont-btn"></span>Guide for Windows&nbsp;</a><a class="text-black dropdown-item text-primary display-4" href="GuideForLinux.html"><span class="fab fa-fw fa-linux mbr-iconfont mbr-iconfont-btn"></span>Guide for Linux&nbsp;</a><a class="text-black dropdown-item text-primary display-4" href="GuideForMacOSX.html"><span class="socicon socicon-apple mbr-iconfont mbr-iconfont-btn"></span>Guide for Mac OSX&nbsp;</a></div></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="Tutorials.html"><span class="mbrib-image-gallery mbr-iconfont mbr-iconfont-btn" style="font-size: 40px;"></span>
                             Tutorials</a></li>
                     
-                    <li class="nav-item dropdown"><a class="nav-link link text-black text-primary dropdown-toggle display-4" href="#" target="_blank" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" aria-expanded="false"><span class="fas fa-video mbr-iconfont mbr-iconfont-btn" style="font-size: 40px;"></span>Screen recording</a><div class="dropdown-menu"><a class="text-black text-primary dropdown-item display-4" href="https://sporttactic.net/RecordScreen.html" target="_blank" aria-expanded="false"><span class="fas fa-play mbr-iconfont mbr-iconfont-btn"></span>App</a><a class="text-black text-primary dropdown-item display-4" href="javascript:OpenModal('screenrecording')" aria-expanded="false"><span class="fas fa-question mbr-iconfont mbr-iconfont-btn"></span>How to</a></div></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="guidelines.html"><span class="fas fa-fw fa-info-circle mbr-iconfont mbr-iconfont-btn" style="font-size: 40px;"></span>Guide lines</a></li></ul>
+                    <li class="nav-item dropdown"><a class="nav-link link text-black text-primary dropdown-toggle display-4" href="#" target="_blank" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" aria-expanded="false"><span class="fas fa-video mbr-iconfont mbr-iconfont-btn" style="font-size: 40px;"></span>Screen recording</a><div class="dropdown-menu"><a class="text-black text-primary dropdown-item display-4" href="javascript:OpenModal('screenrecording')" aria-expanded="false"><span class="fas fa-question mbr-iconfont mbr-iconfont-btn"></span>How to</a><a class="text-black text-primary dropdown-item display-4" href="https://sporttactic.net/RecordScreen.html" target="_blank" aria-expanded="false"><span class="fas fa-play mbr-iconfont mbr-iconfont-btn"></span>App</a></div></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="guidelines.html"><span class="fas fa-fw fa-info-circle mbr-iconfont mbr-iconfont-btn" style="font-size: 40px;"></span>Guide lines</a></li></ul>
                 
                 <div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="javascript:OpenModal('sporttacticfacebook')"><span class="fab fa-fw fa-facebook-square mbr-iconfont mbr-iconfont-btn" style="font-size: 40px;"></span>
                         Join the Community</a></div>
@@ -120,12 +120,12 @@ Produce video clips.">
                     <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content">
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingOne">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_137" aria-expanded="false" aria-controls="collapse1">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_166" aria-expanded="false" aria-controls="collapse1">
                                     <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Read</strong></h6>
                                     <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                 </a>
                             </div>
-                            <div id="collapse1_137" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                            <div id="collapse1_166" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7">Cookies Policy
 <br>Last updated: August 06, 2020
@@ -205,12 +205,12 @@ Produce video clips.">
                     <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content">
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingOne">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_138" aria-expanded="false" aria-controls="collapse1">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_167" aria-expanded="false" aria-controls="collapse1">
                                     <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Read</strong></h6>
                                     <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                 </a>
                             </div>
-                            <div id="collapse1_138" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                            <div id="collapse1_167" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7">Disclaimer
 <br>Last updated: August 06, 2020
@@ -283,12 +283,12 @@ Produce video clips.">
                     <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content">
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingOne">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_139" aria-expanded="false" aria-controls="collapse1">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_168" aria-expanded="false" aria-controls="collapse1">
                                     <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Read</strong></h6>
                                     <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                 </a>
                             </div>
-                            <div id="collapse1_139" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                            <div id="collapse1_168" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7">Privacy Policy
 <br>Last updated: August 06, 2020
@@ -425,12 +425,12 @@ Produce video clips.">
                     <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content">
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingOne">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_140" aria-expanded="false" aria-controls="collapse1">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_169" aria-expanded="false" aria-controls="collapse1">
                                     <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Read</strong></h6>
                                     <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                 </a>
                             </div>
-                            <div id="collapse1_140" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                            <div id="collapse1_169" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7">Terms and Conditions
 <br>Last updated: August 06, 2020
@@ -712,7 +712,7 @@ Relevant and respectful comments. Only use images or video produced by SportTacT
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/a" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/s" style="color:#aaa;">web page</a> was designed with Mobirise site themes</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/q" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">This <a href="https://mobirise.site/e" style="color:#aaa;">page</a> was created with Mobirise</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/theme/js/script.js"></script>  
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9180858051840976"
      crossorigin="anonymous"></script>
   
